change to current branch ref

--- a/.github/workflows/validate-submodule-pull-request.yml
+++ b/.github/workflows/validate-submodule-pull-request.yml
@@ -27,6 +27,18 @@ jobs:
           JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Extract Jira key and PR author from pull request
+        run: |
+          JIRA_KEY="${{ github.event.pull_request.body }}"
+          PR_AUTHOR=${{ env.PULL_REQUEST_AUTHOR_LOGIN }}
+
+      - name: Assign issue to PR author
+        uses: Lombiq/GitHub-Actions/.github/actions/assign-issue-to-pr-author@issue/OSOE-545
+        env:
+          ISSUE_QUERY: "${{ env.JIRA_KEY }} in:title"
+          ASSIGNEE: "${{ env.PR_AUTHOR }}"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }
+
       - name: Ensure Parent PR Exists
         if: github.event.pull_request != ''
         uses: Lombiq/GitHub-Actions/.github/actions/verify-submodule-pull-request@dev
