--- a/.github/workflows/validate-submodule-pull-request.yml
+++ b/.github/workflows/validate-submodule-pull-request.yml
@@ -30,11 +30,11 @@ jobs:
       - name: Extract Jira key and PR author from pull request
         run: |
           BODY="${{ github.event.pull_request.body }}"
-          JIRA_KEY = $(echo $BODY | grep -oP '\[\K[^\]]+')
+          JIRA_KEY=$(echo $BODY | grep -oP '\[\K[^\]]+')
           PR_AUTHOR=${{ github.event.pull_request.user.login }}
       - name: Debug Jira Key
         run: |
-          echo "Jira Key: ${JIRA_KEY}"
+          echo "Jira Key: ${env.JIRA_KEY}"
 
       - name: Assign issue to PR author
         uses: Lombiq/GitHub-Actions/.github/actions/assign-issue-to-pr-author@issue/OSOE-545
