--- a/.github/workflows/validate-submodule-pull-request.yml
+++ b/.github/workflows/validate-submodule-pull-request.yml
@@ -32,6 +32,8 @@ jobs:
           BODY="${{ github.event.pull_request.body }}"
           JIRA_KEY=$(echo $BODY | grep -oP '\[\K[^\]]+')
           PR_AUTHOR=${{ github.event.pull_request.user.login }}
+          echo "::set-env name=PR_AUTHOR::$PR_AUTHOR"
+          echo "::set-env name=JIRA_KEY::$JIRA_KEY"
 
       - name: Assign issue to PR author
         uses: Lombiq/GitHub-Actions/.github/actions/assign-issue-to-pr-author@issue/OSOE-545
