--- a/.github/actions/assign-issue-to-pr-author/action.yml
+++ b/.github/actions/assign-issue-to-pr-author/action.yml
@@ -3,6 +3,10 @@ name: assign-issue-to-pr-author
 runs:
   using: "composite"
   steps:
+    - name: Extract Jira key and PR author from pull request
+      run: |
+        JIRA_KEY=$(echo "${{ github.event.pull_request.body }}" | grep -oP '\[\K[^\]]+')
+        PR_AUTHOR=${{ github.event.pull_request.user.login }}   
     - name: Setup Scripts
       shell: pwsh
       run: |
@@ -13,8 +17,8 @@ runs:
       shell: pwsh
       run: |
         $params = @{
-            IssueQuery = $Env:ISSUE_QUERY
-            Assignee = $Env:ASSIGNEE
+            IssueQuery = "${{ env.JIRA_KEY }} in:title"
+            Assignee = "${{ env.PR_AUTHOR }}"
             GitHubRepository = $Env:GITHUB_REPOSITORY
             PullRequestID = ${{ github.event.number }}
         }
