--- a/.github/actions/assign-issue-to-pr-author/action.yml
+++ b/.github/actions/assign-issue-to-pr-author/action.yml
@@ -4,6 +4,7 @@ runs:
   using: "composite"
   steps:
     - name: Extract Jira key and PR author from pull request
+      shell: pwsh
       run: |
         JIRA_KEY=$(echo "${{ github.event.pull_request.body }}" | grep -oP '\[\K[^\]]+')
         PR_AUTHOR=${{ github.event.pull_request.user.login }}   
