--- a/.github/actions/msbuild/action.yml
+++ b/.github/actions/msbuild/action.yml
@@ -53,6 +53,7 @@ runs:
       uses: microsoft/setup-msbuild@34cfbaee7f672c76950673338facd8a73f637506
       with:
         vs-version: "[17.3,]"
+        msbuild-architecture: x64
 
     - name: Build and Static Code Analysis
       shell: pwsh
