--- a/.github/actions/assign-issue-to-pr-author/action.yml
+++ b/.github/actions/assign-issue-to-pr-author/action.yml
@@ -12,7 +12,7 @@ runs:
     - name: Assign issue to Pull Request Author
       shell: pwsh
       env: 
-        JIRA_KEY: (${github.event.pull_request.body} -match '[(.*?)]')[1]
+        JIRA_KEY: if ("${{ env.github.event.pull_request.body }}" -match '\[(.*?)\]') { $Matches[1] } else { "No Key added" }
         PR_AUTHOR: ${{ github.event.pull_request.user.login }}
       run: |
         $params = @{
