--- a/.github/workflows/build-dotnet.yml
+++ b/.github/workflows/build-dotnet.yml
@@ -88,14 +88,10 @@ jobs:
   build:
     runs-on: ${{ matrix.machine-type }}
     name: Build
-    # Timeout-minutes is in the matrix only because the config can't be set directly from the inputs, see:
-    # https://github.com/actions/runner/issues/1555.
     strategy:
       matrix:
         machine-type: ${{ fromJson(inputs.machine-types) }}
-        timeout-minutes:
-          - ${{ inputs.timeout-minutes }}
-    timeout-minutes: ${{ matrix.timeout-minutes }}
+    timeout-minutes: ${{ inputs.timeout-minutes }}
     steps:
       - name: Deprecation Warning
         shell: pwsh
