Modify description of timeout-minutes

--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -54,7 +54,9 @@ on:
         required: false
         type: number
         default: 3
-        description: Configuration for the timeout-minutes parameter of the workflow. The 360 is GitHub's default.
+        description: >
+          Configuration for the timeout-minutes parameter of the workflow. The 360 is GitHub's default.
+          For short-running workflows this default number should be determined based on the executions of the given workflow.
 
 jobs:
   check-spelling:
