--- a/.github/workflows/validate-pull-request.yml
+++ b/.github/workflows/validate-pull-request.yml
@@ -14,7 +14,10 @@ on:
         required: false
         type: number
         default: 6
-        description: Configuration for the timeout-minutes parameter of the workflow. The 360 is GitHub's default.
+        description: >
+          Configuration for the timeout-minutes parameter of the workflow. The 360 is GitHub's default.
+          For short-running workflows this default number should be determined based on the executions of the given workflow.
+
 jobs:
   validate-pull-request:
     runs-on: ubuntu-22.04
