--- a/.github/workflows/validate-submodule-pull-request.yml
+++ b/.github/workflows/validate-submodule-pull-request.yml
@@ -15,10 +15,18 @@ on:
         required: false
         default: Lombiq/Open-Source-Orchard-Core-Extensions
         description: The parent repository's full name in "{owner}/{repository}" format.
+      timeout-minutes:
+        required: false
+        type: number
+        default: 6
+        description: >
+          Configuration for the timeout-minutes parameter of the workflow. The 360 is GitHub's default.
+          For short-running workflows this default number should be determined based on the executions of the given workflow.
 
 jobs:
   validate-submodule-pull-request:
     runs-on: ubuntu-22.04
+    timeout-minutes: ${{ inputs.timeout-minutes }}
     steps:
       - name: Add Jira Issue Code to Pull Request
         if: github.event_name == 'pull_request' && github.event.action == 'opened'
