--- a/.github/actions/assign-issue-to-pr-author/action.yml
+++ b/.github/actions/assign-issue-to-pr-author/action.yml
@@ -3,6 +3,12 @@ name: assign-issue-to-pr-author
 runs:
   using: "composite"
   steps:
+    - name: Setup Scripts
+      shell: pwsh
+      run: |
+        "${{ github.action_path }}" >> $Env:GITHUB_PATH
+        (Resolve-Path "${{ github.action_path }}/../../../Scripts").Path >> $Env:GITHUB_PATH
+
     - name: Assign issue to Pull Request Author
       shell: pwsh
       env: 
