--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -30,16 +30,15 @@ on:
         required: false
         type: string
         default: |
-          cspell:filetypes/filetypes.txt
-          cspell:django/django.txt
           cspell:aws/aws.txt
-          cspell:html/html.txt
-          cspell:css/css.txt
           cspell:csharp/csharp.txt
-          cspell:rust/rust.txt
-          cspell:npm/npm.txt
+          cspell:css/css.txt
           cspell:dotnet/dotnet.txt
-          cspell:scala/scala.txt
+          cspell:filetypes/filetypes.txt
+          cspell:html/html.txt
+          cspell:node/node.txt
+          cspell:npm/npm.txt
+          cspell:software-terms/src/software-terms.txt
       config:
         description: Spelling configuration directory
         required: false
