--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -23,6 +23,7 @@ on:
         type: string
         default: >
           {
+            "lombiq-lgha": "https://raw.githubusercontent.com/Lombiq/GitHub-Actions/issue/OSOE-523/.github/actions/spelling/dictionaries/",
             "cspell": "https://raw.githubusercontent.com/check-spelling/cspell-dicts/v20220816/dictionaries/"
           }
       extra-dictionaries:
