--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -33,6 +33,7 @@ on:
         default: |
           cspell:filetypes/filetypes.txt
           cspell:software-terms/src/software-terms.txt
+          lombiq-lgha:lombiq-common.txt
       config:
         description: Spelling configuration directory
         required: false
