--- a/.github/workflows/create-jira-issues-for-community-activities.yml
+++ b/.github/workflows/create-jira-issues-for-community-activities.yml
@@ -49,10 +49,8 @@ on:
       timeout-minutes:
         required: false
         type: number
-        default: 360
-        description: >
-          Configuration for the timeout-minutes parameter of the workflow. The 360 is GitHub's default.
-          For short-running workflows this default number should be determined based on the executions of the given workflow.
+        default: 21
+        description: Configuration for the timeout-minutes parameter of the workflow. The 360 is GitHub's default.
 
 jobs:
   create-jira-issues-for-community-activities:
