--- a/.github/workflows/spelling-this-repo.yml
+++ b/.github/workflows/spelling-this-repo.yml
@@ -11,6 +11,6 @@ on:
 jobs:
   spelling:
     name: Spelling
-    uses: Lombiq/GitHub-Actions/.github/workflows/spelling.yml@issue/OSOE-562
+    uses: Lombiq/GitHub-Actions/.github/workflows/spelling.yml@dev
     with:
       spell-check-this: Lombiq/GitHub-Actions@dev
