--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -15,25 +15,25 @@ on:
         required: false
         type: string
         default: "true"
-      dictionary-source-prefixes:
-        description: >
-          JSON map of prefixes for dictionary URLs, "cspell" is necessary. See
-          https://github.com/check-spelling/check-spelling/blob/v0.0.21/action.yml#L67 for current version.
-        required: false
-        type: string
-        default: >
-          {
-            "lombiq-lgha": "https://raw.githubusercontent.com/Lombiq/GitHub-Actions/issue/OSOE-523/.github/actions/spelling/dictionaries/",
-            "cspell": "https://raw.githubusercontent.com/check-spelling/cspell-dicts/v20220816/dictionaries/"
-          }
-      extra-dictionaries:
-        description: Space delimited list of URLs (or `prefix:`+path) to additional word lists.
-        required: false
-        type: string
-        default: |
-          cspell:filetypes/filetypes.txt
-          cspell:software-terms/src/software-terms.txt
-          lombiq-lgha:lombiq-common.txt
+      # dictionary-source-prefixes:
+      #   description: >
+      #     JSON map of prefixes for dictionary URLs, "cspell" is necessary. See
+      #     https://github.com/check-spelling/check-spelling/blob/v0.0.21/action.yml#L67 for current version.
+      #   required: false
+      #   type: string
+      #   default: >
+      #     {
+      #       "lombiq-lgha": "https://raw.githubusercontent.com/Lombiq/GitHub-Actions/issue/OSOE-523/.github/actions/spelling/dictionaries/",
+      #       "cspell": "https://raw.githubusercontent.com/check-spelling/cspell-dicts/v20220816/dictionaries/"
+      #     }
+      # extra-dictionaries:
+      #   description: Space delimited list of URLs (or `prefix:`+path) to additional word lists.
+      #   required: false
+      #   type: string
+      #   default: |
+      #     cspell:filetypes/filetypes.txt
+      #     cspell:software-terms/src/software-terms.txt
+      #     lombiq-lgha:lombiq-common.txt
       config:
         description: Spelling configuration directory
         required: false
@@ -69,8 +69,8 @@ jobs:
       - name: Check Spelling
         uses: Lombiq/GitHub-Actions/.github/actions/spelling@issue/OSOE-523
         with:
-          dictionary-source-prefixes: ${{ inputs.dictionary-source-prefixes }}
-          extra-dictionaries: ${{ inputs.extra-dictionaries }}
+          # dictionary-source-prefixes: ${{ inputs.dictionary-source-prefixes }}
+          # extra-dictionaries: ${{ inputs.extra-dictionaries }}
           config: ${{ inputs.config }}
           spell-check-this: ${{ inputs.spell-check-this }}
 
